# game

./: Project2.sln
Project2/: Project2.vcxproj  main.cpp
Project2/Debug/: vc142.idb
Project2/Debug/Project2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Project2.lastbuildstate
Project2/x64/Debug/: main.obj.enc  vc141.idb  vc142.idb
Project2/x64/Debug/Project2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Project2.lastbuildstate  link.command.1.tlog  link.delete.1.tlog  link.read.1.tlog  link.write.1.tlog
src/: CMakeLists.txt  lib.cpp  lib.hpp  main.cpp  test.cpp
x64/Debug/: Project2.ilk
